[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "rl-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
]


[tool.setuptools.packages.find]
where = ["src"]
